@@ -8,7 +8,6 @@ import org.integratedmodelling.kim.api.IParameters;
 import org.integratedmodelling.kim.api.IServiceCall;
 import org.integratedmodelling.kim.model.KimServiceCall;
 import org.integratedmodelling.klab.Resources;
-import org.integratedmodelling.klab.api.data.IGeometry.Dimension;
 import org.integratedmodelling.klab.api.data.IResource;
 import org.integratedmodelling.klab.api.data.adapters.IKlabData;
 import org.integratedmodelling.klab.api.data.general.IExpression;
@@ -29,8 +28,8 @@ public class UrnResolver implements IExpression, IResolver<IArtifact> {
 
 	private IResource resource;
 	private Map<String, String> urnParameters;
-	private boolean localized = false;
-	private IScale overallScale;
+//	private boolean localized = false;
+//	private IScale overallScale;
 
 	// don't remove - only used as expression
 	public UrnResolver() {
@@ -43,7 +42,7 @@ public class UrnResolver implements IExpression, IResolver<IArtifact> {
 			throw new KlabResourceNotFoundException("resource with URN " + urn + " is unavailable or offline");
 		}
 		this.urnParameters = call.getSecond();
-		this.overallScale = overallContext.getContextObservation().getScale();
+//		this.overallScale = overallContext.getContextObservation().getScale();
 	}
 
 	public static IServiceCall getServiceCall(String urn, IContextualizable condition, boolean conditionNegated) {
@@ -53,23 +52,19 @@ public class UrnResolver implements IExpression, IResolver<IArtifact> {
 	@Override
 	public IArtifact resolve(IArtifact observation, IContextualizationScope context) {
 
-		// choose the T-specific resource(s). TODO use a set of resources to fill in
-		// nodata (and potentially add up values over multiple temporal granularities).
-		IResource res = this.resource;
-		if (!localized && resource.getGeometry().getDimension(Dimension.Type.TIME) != null
-				&& overallScale.getTime() != null && !overallScale.getTime().isGeneric()
-				&& resource.getGeometry().getDimension(Dimension.Type.TIME).isGeneric()) {
-			// localize the resource if needed
-			res = res.localize(overallScale.getTime());
-		}
-		this.localized = true;
+		/**
+		 * Contextualize the resource to the passed context and parameters.
+		 */
+		IResource res = this.resource.contextualize(context.getScale(), observation, urnParameters, context);
+		Map<String, String> parameters = urnParameters;
+//		this.localized = true;
 
 		if (this.resource instanceof MergedResource) {
 
-			List<IResource> resources = ((MergedResource) this.resource).contextualize(context.getScale(), observation);
+			List<Pair<IResource, Map<String,String>>> resources = ((MergedResource) this.resource).contextualize(context.getScale(), observation);
 			if (resources.isEmpty()) {
 				context.getMonitor()
-						.warn("resource " + this.resource.getUrn() + " cannot be contextualized in this scale");
+						.warn("resource " + this.resource.getUrn() + " could not be contextualized in this scale");
 				return observation;
 			}
 
@@ -80,11 +75,12 @@ public class UrnResolver implements IExpression, IResolver<IArtifact> {
 						"Warning: unimplemented use of multiple resources for one timestep. Choosing only the first.");
 			}
 
-			res = resources.get(0);
+			res = resources.get(0).getFirst();
+			parameters = resources.get(0).getSecond();
 		}
 
 		System.err.println("GETTING DATA FROM " + res.getUrn());
-		IKlabData data = Resources.INSTANCE.getResourceData(res, urnParameters, context.getScale(), context);
+		IKlabData data = Resources.INSTANCE.getResourceData(res, parameters, context.getScale(), context);
 		System.err.println("DONE " + res.getUrn());
 		
 		if (data == null) {
